--- a/bmi.html
+++ b/bmi.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BMI Calculation</title>
 </head>
 <body>
-    
+    <form>
+        <label for="weight">Weight:</label>
+        <input type="number" name="weight"><br><br>
+        <label for="height">Height:</label>
+        <input type="number" name="height"><br><br>
+        <button>Calculate</button><br><br>
+        <span></span>
+    </form>
 </body>
 </html>
