Added id in form.

--- a/bmi.html
+++ b/bmi.html
@@ -8,11 +8,11 @@
 <body>
     <form>
         <label for="weight">Weight:</label>
-        <input type="number" name="weight"><br><br>
+        <input id="input-number-weight" type="number" name="weight"><br><br>
         <label for="height">Height:</label>
-        <input type="number" name="height"><br><br>
-        <button>Calculate</button><br><br>
-        <span></span>
+        <input id="input-number-height" type="number" name="height"><br><br>
+        <button id="button-calculate">Calculate</button><br><br>
+        <span id="span-result"></span>
     </form>
 </body>
 </html>
