Added ways to get from input value

--- a/bmi.html
+++ b/bmi.html
@@ -11,8 +11,10 @@
         <input id="input-number-weight" type="number" name="weight"><br><br>
         <label for="height">Height:</label>
         <input id="input-number-height" type="number" name="height"><br><br>
-        <button id="button-calculate">Calculate</button><br><br>
-        <span id="span-result"></span>
+        <button id="button-calculate" onclick="calculateBmi()">Calculate</button><br><br>
+      
     </form>
+    <span id="span-result"></span>
+    <script src = "bmi.js"></script>
 </body>
 </html>
