--- a/bmi.html
+++ b/bmi.html
@@ -9,10 +9,11 @@
 <body>
     <form>
         <label for="weight">Weight:</label>
-        <input id="input-number-weight" type="number" name="weight"><br><br>
+        <input id="input-number-weight" type="number" value=0 name="weight"><br><br>
         <label for="height">Height:</label>
-        <input id="input-number-height" type="number" name="height"><br><br>
-        <button id="button-calculate" onclick="calculateBmi()">Calculate</button><br><br>
+        <input id="input-number-height" type="number" value=0 name="height"><br><br>
+        <!-- onclick is added so that whenever we click on Calculate then it will display result. -->
+        <button id="button-calculate" onclick="calculateBmi()">Calculate</button><br><br> 
       
     </form>
     <span id="span-result"></span>
